# hermes-wiki-automation

./: LICENSE  README.md  pyproject.toml
docs/: ARCHITECTURE.md  PROJECT-SUMMARY.md
plugins/durable_answer_on_session_end/: __init__.py  plugin.yaml
scripts/: wiki-file-durable-answer-queue-v1-direct.sh  wiki-file-durable-answer-queue-v1.py  wiki-prepare-durable-answer-payload-v1.py  wiki_file_durable_answer.py  wiki_file_durable_answer_queue.py  wiki_file_durable_answer_queue_direct.sh
tests/: test_durable_answer_on_session_end_plugin.py  test_wiki_file_durable_answer.py  test_wiki_file_durable_answer_queue.py  test_wiki_file_durable_answer_queue_v1.py  test_wiki_file_durable_answer_v1.py  test_wiki_prepare_durable_answer_payload.py  test_wiki_prepare_durable_answer_payload_v1.py
